<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SlidingMenu Demos</string>
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="github">Pavežikas</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="changing_fragments">Pavežikas</string>
    <string name="refresh">Atnaujinti</string>
    <string name="main_menu">Meniu</string>
    <string name="add">Pridėti skelbimą</string>
    <string name="search">Ieškoti</string>
    <string name="home">Grįžti</string>
    <string name="passengers">Keleiviai</string>
    <string name="drivers">Vežėjai</string>
    <string name="all">Visi</string>
    <string name="menu_navigation">Filtras: Visi</string>
    <string name="month_1_ltu">Sausio</string>
    <string name="month_2_ltu">Vasario</string>
    <string name="month_3_ltu">Kovo</string>
    <string name="month_4_ltu">Balandžio</string>
    <string name="month_5_ltu">Gegužės</string>
    <string name="month_6_ltu">Birželio</string>
    <string name="month_7_ltu">Liepos</string>
    <string name="month_8_ltu">Rugpjūčio</string>
    <string name="month_9_ltu">Rugsėjo</string>
    <string name="month_10_ltu">Spalio</string>
    <string name="month_11_ltu">Lapkričio</string>
    <string name="month_12_ltu">Gruodžio</string>
    <string name="url_select_from_route">http://vezikas.bugs3.com/json_db_access/selectFromRoute.php</string>
    <string name="url_insert_to_route">http://vezikas.bugs3.com/json_db_access/insertToRoute.php</string>
    <string name="url_select_from_phone">http://vezikas.bugs3.com/json_db_access/selectFromPhone.php</string>
    <string name="url_insert_to_phone">http://vezikas.bugs3.com/json_db_access/insertToPhone.php</string>
    <string name="url_insert_to_driverpost">http://vezikas.bugs3.com/json_db_access/insertToDriverPost.php</string>
    <string name="url_get_posts">http://vezikas.bugs3.com/json_db_access/getPosts.php</string>
    <string name="url_get_facebook_information">http://vezikas.bugs3.com/json_db_access/getFacebookInformation.php</string>
    <string name="url_update_user">http://vezikas.bugs3.com/json_db_access/UpdateUser.php</string>
    <string name="url_select_user_rating">http://vezikas.bugs3.com/json_db_access/selectUserRating.php</string>
    <string name="title_activity_facbook_login">FacbookLoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="app_id">356729764461219</string>
	
	
	<string name="cancelled">Atsijungta nuo Facebook</string>
    <string name="permission_not_granted">Negalima atlikti šio veiksmo, nes neturite reikiamų Facebook leidimų.</string>
    <string name="ok">Supratau</string>
    <string name="fb_login">Prisijungti</string>
    <string name="fb_logout">Atsijungti</string>
    
</resources>