<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
		<item
        android:id="@+id/add"
        android:title="@string/add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/plus_icon"
        />
		
		<item
        android:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/menu_navigation"
        
        >
        <menu>
            <item
                android:id="@+id/drivers"
                android:showAsAction="always"
                android:title="@string/drivers"
                android:icon="@drawable/car_icon"
                />
            <item
                android:id="@+id/passengers"
                android:showAsAction="always"
                android:title="@string/passengers"
                android:icon="@drawable/bag_icon"
                />
            <item
                android:id="@+id/all"
                android:showAsAction="always"
                android:title="@string/all"/>
        </menu>
    	</item>
		
		<item
        android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:icon="@drawable/search_icon"
        />
		

</menu>
