<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
 
    <ImageButton
        android:id="@+id/home"
        android:title="@string/home"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_launcher"
        android:background="@android:color/transparent"
        android:onClick="home"
         />
 
    <TextView
        android:id="@+id/title"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="Pavežikas"
        android:textColor="#FFFFFF" />
    <ImageButton
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:onClick="refresh"
        android:src="@drawable/ic_launcher" 
        android:background="@android:color/transparent"
        />
    <ImageButton
        android:id="@+id/main_menu"
        android:title="@string/main_menu"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:onClick="main_menu"
        android:src="@drawable/ic_launcher" 
        android:background="@android:color/transparent"
        />
 
</LinearLayout>